# iris

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: c-cpp.yml
frontends/pbrt/: BUILD  build_objects.h  build_objects_test.cc  color.h  defaults.cc  defaults.h  defaults_embed.c  defaults_embed.h  defaults_embed_generate.cc  directives.cc  directives.h  directives_test.cc  file.cc  file.h  file_test.cc  image_manager.cc  image_manager.h  image_manager_test.cc  main.cc  material_manager.cc  material_manager.h  material_manager_test.cc  matrix_manager.cc  matrix_manager.h  matrix_manager_test.cc  object_builder.h  object_builder_test.cc  parameter.cc  parameter.h  parameter_list.cc  parameter_list.h  parameter_list_test.cc  parameter_test.cc  parser.cc  parser.h  parser_test.cc  quoted_string.cc  quoted_string.h  quoted_string_test.cc  renderable.cc  (+11 more)
iris/: BUILD  albedo_matcher.h  bounding_box.cc  bounding_box.h  bounding_box_test.cc  bsdf.cc  bsdf.h  bsdf_test.cc  bxdf.h  bxdf_allocator.cc  bxdf_allocator.h  bxdf_allocator_test.cc  camera.h  color.cc  color.h  color_matcher.h  color_test.cc  emissive_material.h  environmental_light.h  float.h  framebuffer.cc  framebuffer.h  framebuffer_test.cc  geometry.cc  geometry.h  geometry_test.cc  hit.h  hit_allocator.cc  hit_allocator.h  hit_allocator_test.cc  hit_point.cc  hit_point.h  hit_point_test.cc  image_sampler.h  integer.h  integrator.h  intersector.cc  intersector.h  intersector_test.cc  light.h  (+64 more)
iris/albedo_matchers/: BUILD  mock_albedo_matcher.h
iris/bsdfs/: BUILD  lambertian_brdf.cc  lambertian_brdf.h  mock_bsdf.h
iris/bxdfs/: BUILD  ashikhmin_shirley_brdf.cc  ashikhmin_shirley_brdf.h  ashikhmin_shirley_brdf_test.cc  attenuated_bxdf.cc  attenuated_bxdf.h  attenuated_bxdf_test.cc  composite_bxdf.cc  composite_bxdf.h  composite_bxdf_test.cc  fourier_bxdf.cc  fourier_bxdf.h  fourier_bxdf_test.cc  fresnel.cc  fresnel.h  fresnel_dielectric_bxdf.cc  fresnel_dielectric_bxdf.h  fresnel_dielectric_bxdf_test.cc  fresnel_test.cc  lambertian_brdf.cc  lambertian_brdf.h  lambertian_brdf_test.cc  lambertian_bxdf.cc  lambertian_bxdf.h  lambertian_bxdf_test.cc  math.h  math_test.cc  microfacet_bxdf.cc  microfacet_bxdf.h  microfacet_bxdf_test.cc  microfacet_distribution.cc  microfacet_distribution.h  microfacet_distribution_test.cc  mirror_brdf.cc  mirror_brdf.h  mirror_brdf_test.cc  mock_bxdf.h  oren_nayar_bxdf.cc  oren_nayar_bxdf.h  oren_nayar_bxdf_test.cc  (+9 more)
iris/cameras/: BUILD  mock_camera.h  orthographic_camera.cc  orthographic_camera.h  orthographic_camera_test.cc  perspective_camera.cc  perspective_camera.h  perspective_camera_test.cc  pinhole_camera.cc  pinhole_camera.h  pinhole_camera_test.cc  thin_lens_camera.cc  thin_lens_camera.h  thin_lens_camera_test.cc
iris/color_matchers/: BUILD  cie_color_matcher.cc  cie_color_matcher.h  cie_color_matcher_test.cc  mock_color_matcher.h
iris/emissive/: BUILD  mock_emissive_material.h
iris/emissive_materials/: BUILD  constant_emissive_material.cc  constant_emissive_material.h  constant_emissive_material_test.cc  mock_emissive_material.h
(+541 files in other folders)
