"iris is a ray tracer written in C++23"
module(name = "iris", version = "head", compatibility_level = 1)

# Bazel Central Registry dependencies
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "plyodine", version = "1.1.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "protobuf", version = "31.1")

# Git Dependencies
bazel_dep(name = "libfbsdf")
git_override(
    module_name = "libfbsdf",
    remote = "https://github.com/bradleymarie/libfbsdf.git",
    commit = "9ea59f661f49e84cd27c34c700b7f87b17e07378",
)

bazel_dep(name = "libspd")
git_override(
    module_name = "libspd",
    remote = "https://github.com/bradleymarie/libspd.git",
    commit = "4fbad05b280bb54a4e97b5cef044764bc8c99f43",
)

bazel_dep(name = "pbrt_proto")
git_override(
    module_name = "pbrt_proto",
    remote = "https://github.com/bradleymarie/pbrt_proto.git",
    commit = "28055be59d0178ee69f128b48d90a297c11b1d98",
)
